[package]
name = "playing"
version = "0.1.0"
authors = ["Aaron Gross <aaron.gross.code@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
ndarray = "0.13.0"
ndarray-rand = "0.11.0"
rand = "0.7.2"
rodio = "0.10.0"
tcod = "0.15.0"
ron = "0.6.4"
serde = { version = "1.0.104", features = ["derive"]}
serde_cbor = "0.11.1"
nom = "6.1.0"